--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>LzTr</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Legend user class. 1 year account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Legend user class. 2 years account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>1 month account age.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>RED</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -102,7 +102,7 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">Anthelion (ANT)<br>Invite forum unlocks with Power User user class: 1TB upload, 1.0 ratio, 5 torrents uploaded or 10 torrents adopted, 25000 Orbs.<br><br>Fanatic user class: 2TB upload, 1.5 ratio, 25 uploads and/or 50 adoptions (minimum 5 uploads), 3 months account age, 100000 Orbs.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>Aither</td><td>120&nbsp;days</td><td>4 months old account.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BBT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BBT</td><td>14&nbsp;days</td><td>ANT activity proof.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>BLU</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>CZ</td><td>180&nbsp;days</td><td>Fanatic user class. 50 uploaded torrents, or 75 adopted torrents. 6 months account age.</td></tr>
@@ -111,28 +111,34 @@
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx user class: 3.2TB upload, 1.44 million seed bonus points, no Hit and Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit and Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit and Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>Aither</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>GGn</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>iAnon</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 ratio. 1 year account age.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>LzTr</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>OBS</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>OPS</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>SceneHD</td><td>365&nbsp;days</td><td>1 torrent upload tagged scene, 12 months account age.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>2 other tracker profiles. 6 months account age.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>SceneHD</td><td>365&nbsp;days</td><td>1 torrent upload tagged scene. 12 months account age.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>UHDB</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">BeyondHD (BHD)<br>Invite forum unlocks with Pro user class: 1.25TB upload, 0.70 ratio, 30 days seed time, 4 years 11 months total seed time, 60 completed seeds, 500GB special seed size, 6 months account age.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Aither</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>2.0 ratio, or Elite user class and 1.0 ratio.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CRT</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>HDB</td><td>913&nbsp;days</td><td>3 other top tracker profiles. King user class. 3TB seed size. 5 months average seed time. 30 months account age.<br>Banned countries: China, Egypt, Latvia, Russia, Turkey, Ukraine, Vietnam, Poland and India.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Hone</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>NBL</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>King user class. 2 years account age.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>PxC</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>2 other tracker profiles.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>RED</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>SM</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>THD</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Bibliotik (BiB)<br>Invite forum unlocks with Power User user class: either 1GB upload and 100 torrents uploaded, or 10GB upload and 10 torrents uploaded, 1.05 ratio, 2 weeks account age.</td></tr>
 <tr><th scope="row">BiB<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
@@ -145,10 +151,8 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">Blutopia (BLU)<br>Invite forum unlocks with BluExtremist or BluSeeder<br>BluExtremist: 20TB upload, 3 months account age.<br>BluSeeder: 5TB seedsize, 30 days average seedtime, 1 month account age.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>DT</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>FL</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
-<tr><th scope="row">BLU<span class="arrow">-&gt;</span>NBL</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>OPS</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">BLU<span class="arrow">-&gt;</span>THD</td><td>30&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
@@ -218,12 +222,12 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">GazelleGames.net (GGn)<br>Invite forum unlocks with Pro Gamer user class. All user classes are gained with achievement points.<br>Additional invite forum unlocks with Legendary Gamer user class.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>AB</td><td>180&nbsp;days</td><td>Elite Gamer user class. 6 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>Aither</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>ANT</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>CCS</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>CGP</td><td>90&nbsp;days</td><td>1.0 real ratio. 3 months account age.</td></tr>
+<tr><th scope="row">GGn<span class="arrow">-&gt;</span>CRT</td><td>30&nbsp;days</td><td>1.0 ratio.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>DIC</td><td>30&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
-<tr><th scope="row">GGn<span class="arrow">-&gt;</span>EB</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>FF</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>iAnon</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">GGn<span class="arrow">-&gt;</span>MAM</td><td>30&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -319,7 +323,6 @@
 <tr><td colspan="3">MyAnonaMouse (MAM)<br>Invite forum unlocks with Power User user class: 25GB upload, 2.0 ratio, 4 weeks account age.<br>Some threads additionally require VIP, purchased with bonus points.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>ABT</td><td>28&nbsp;days</td><td>Other tracker profiles.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>ANT</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BdC</td><td>60&nbsp;days</td><td>2 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BHDTV</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>BtW</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -328,7 +331,6 @@
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 real ratio. 1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>Milkie</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>MiM</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">MAM<span class="arrow">-&gt;</span>NBL</td><td>365&nbsp;days</td><td>1 year account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>OBS</td><td>90&nbsp;days</td><td>100GB upload. 3 months account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>OPS</td><td>730&nbsp;days</td><td>2 years account age.</td></tr>
 <tr><th scope="row">MAM<span class="arrow">-&gt;</span>PxC</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -395,10 +397,15 @@
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio. 6 months account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>NBL</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>OpenCD</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">OPS<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
+<tr><th scope="row">OPS<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Torrent Master user class. 2 years account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>RED</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>SM</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">OPS<span class="arrow">-&gt;</span>UHDB</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">Pornbay (PB)<br>Invite forum unlocks with Expert User user class: 100GB upload, 1.05 ratio, 25 torrents uploaded, 8 weeks account age.</td></tr>
+<tr><th scope="row">PB<span class="arrow">-&gt;</span>Emp</td><td>56&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">PB<span class="arrow">-&gt;</span>ENT</td><td>56&nbsp;days</td><td>No data yet.</td></tr>
+<tr><th scope="row">PB<span class="arrow">-&gt;</span>MTV</td><td>56&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">PTerClub (PTer)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 10000 seeding points, 1 torrent uploaded, 5 weeks account age.</td></tr>
 <tr><th scope="row">PTer<span class="arrow">-&gt;</span>Audiences</td><td>70&nbsp;days</td><td>Elite User user class.</td></tr>
@@ -530,11 +537,11 @@
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>NBL</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OPS</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr><tr class="spacer"></tr>
+<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
