Update index.html (alphabetical reordering)

--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>U2</td><td>14&nbsp;days</td><td>Content to contribute.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">Anthelion (ANT)<br>Invite forum unlocks with Power User user class: 1TB upload, 1.0 ratio, 5 torrents uploaded or 10 torrents adopted, 25000 Orbs.<br><br>Fanatic user class: 2TB upload, 1.5 ratio, 25 uploads and/or 50 adoptions (minimum 5 uploads), 3 months account age, 100000 Orbs.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>Aither</td><td>120&nbsp;days</td><td>4 months old account.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>BBT</td><td>14&nbsp;days</td><td>ANT activity proof.</td></tr>
@@ -301,9 +303,13 @@
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>PTP</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr><th scope="row">HDB<span class="arrow">-&gt;</span>TTG</td><td>365&nbsp;days</td><td>No data yet.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">KamePT (KamePT)<br>Invite forum unlocks with Power User user class: 50GB download, 1.05 ratio, 4 weeks account age, 40,000 seed points.</td></tr>
 <tr><th scope="row">KamePT<span class="arrow">-&gt;</span>MDU</td><td>28&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">KamePT<span class="arrow">-&gt;</span>RedLeaves</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr class="spacer"></tr>
+<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">M-Team (M-T)<br>Invite forum unlocks with Elite User user class: 400GB download, 3.0 ratio, 8 weeks account age.</td></tr>
 <tr><th scope="row">M-T<span class="arrow">-&gt;</span>2xFree</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
@@ -537,11 +543,6 @@
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>NBL</td><td>56&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">UHDB<span class="arrow">-&gt;</span>OPS</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">HD-Torrents (HDT)<br>No official recruitment.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
-<tr class="spacer"></tr>
-<tr><td colspan="3">LzTr (LzTr)<br>Invite forum unlocks with Power User user class: 25GB upload, 1.05 ratio, 5 torrents uploaded, 2 weeks account age.</td></tr><tr class="spacer"></tr>
 </table>
 </body>
 </html>
