Update index.html (sync AR)

--- a/index.html
+++ b/index.html
@@ -121,18 +121,18 @@
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>OPS</td><td>90&nbsp;days</td><td>Fanatic user class. ANT activity proof.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx user class: 3.2TB upload, 1.44 million seed bonus points, no Hit and Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit and Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit and Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>Aither</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx+ user class: 3.2TB upload, 1.44 million seed bonus points, no Hit & Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit & Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit & Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>Aither</td><td>182&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>1.0 ratio.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>GGn</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 ratio. 1 year account age.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>iAnon</td><td>365&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>LzTr</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>OBS</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>OPS</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>2 other tracker profiles. 6 months account age.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>SceneHD</td><td>365&nbsp;days</td><td>1 torrent upload tagged scene. 12 months account age.</td></tr>
-<tr><th scope="row">AR<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>PxHD</td><td>182&nbsp;days</td><td>2 other tracker profiles.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>SHD</td><td>365&nbsp;days</td><td>1 scene torrent, 1 other tracker profile.</td></tr>
+<tr><th scope="row">AR<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>Required age or proof of 1 other tracker profile older than required age.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>UHDB</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">BeyondHD (BHD)<br>Invite forum unlocks with Pro user class: 1.25TB upload, 0.70 ratio, 30 days seed time, 4 years 11 months total seed time, 60 completed seeds, 500GB special seed size, 6 months account age.</td></tr>
