Update index.html (sync AB)

--- a/index.html
+++ b/index.html
@@ -75,29 +75,30 @@
 <th scope="col">Required&nbsp;age</th>
 <th scope="col">Additional&nbsp;information</th>
 </tr>
-<tr><td colspan="3">AnimeBytes (AB)<br>Invite forum unlocks with Power User user class: 25GB upload, 0.7 ratio, 10 torrents uploaded, 2 weeks account age.<br><br>Torrent Master user class: 500GB upload, 0.9 ratio, 100 torrents uploaded, 90 days account age.<br>Legend user class: 1TB upload, 1.0 ratio, 500 torrents uploaded, 180 days account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>ACM</td><td>180&nbsp;days</td><td>4TB upload. 6 months account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><td colspan="3">AnimeBytes (AB)<br>Invite forum unlocks with Power User+ user class: 25GB upload, 0.7 ratio, 10 torrents uploaded, 2 weeks account age.<br><br>Torrent Master user class: 500GB upload, 0.9 ratio, 100 torrents uploaded, 90 days account age.<br>Legend user class: 1TB upload, 1.0 ratio, 500 torrents uploaded, 180 days account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>Aither</td><td>90&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>ANT</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>BBT</td><td>180&nbsp;days</td><td>6 months account age. Seeding at least half of your snatched torrents.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master user class. 1 year account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>Animaga [Usenet]</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>ACM</td><td>182&nbsp;days</td><td>4TB upload.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>BBT</td><td>182&nbsp;days</td><td>1.0 Ratio, Seeding at least half of your snatched torrents.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>BTN</td><td>365&nbsp;days</td><td>Torrent Master+ user class.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>CCS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>D3</td><td>14&nbsp;days</td><td>Torrent Master user class. 1.5 ratio. 50 Perfect FLAC torrent uploads. 1 year account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10 music uploads, or 15 other uploads.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>Emp</td><td>180&nbsp;days</td><td>6 months account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>D3</td><td>365&nbsp;days</td><td>Torrent Master+ user class, 1.5 ratio, 50 'perfect FLAC' uploads.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>DIC</td><td>14&nbsp;days</td><td>10+ music uploads or 15+ uploads.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>EMP</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>FF</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>LzTr</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>GGn</td><td>90&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>LzTr</td><td>90&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>NBL</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>OPS</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Legend user class. 2 years account age.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>PxC</td><td>30&nbsp;days</td><td>1 month account age.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>Legend+ user class.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>PxHD</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>RED</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>TG</td><td>14&nbsp;days</td><td>2 or 3 other tracker profiles.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>TG</td><td>14&nbsp;days</td><td>2-3 other tracker profiles.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>TE</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>THD</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">AB<span class="arrow">-&gt;</span>U2</td><td>14&nbsp;days</td><td>Content to contribute.</td></tr>
+<tr><th scope="row">AB<span class="arrow">-&gt;</span>U2</td><td>14&nbsp;days</td><td>Can provide proofs of content to contribute (photos), or anime collection screenshot and write-up about favorite seasonal anime.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
