Update index.html (sync AnT)

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>U2</td><td>14&nbsp;days</td><td>Can provide proofs of content to contribute (photos), or anime collection screenshot and write-up about favorite seasonal anime.</td></tr>
 <tr><th scope="row">AB<span class="arrow">-&gt;</span>UHDB</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">AnimeTorrents a.k.a. AnimeZ (AnT)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Aither<br>Invite forum unlocks with Prometheus+ user class: 10TB upload, 1.0 ratio, 1 month average seedtime, 6 month account age.</td></tr>
