--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
 <tr><th scope="row">Aither<span class="arrow">-&gt;</span>OE</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">Aither<span class="arrow">-&gt;</span>RFX</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">Anthelion (ANT)<br>Invite forum unlocks with Power User user class: 1TB upload, 1.0 ratio, 5 torrents uploaded or 10 torrents adopted, 25000 Orbs.<br><br>Fanatic user class: 2TB upload, 1.5 ratio, 25 uploads and/or 50 adoptions (minimum 5 uploads), 3 months account age, 100000 Orbs.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>Aither</td><td>120&nbsp;days</td><td>4 months old account.</td></tr>
+<tr><td colspan="3">Anthelion (ANT)<br>Invite forum unlocks with Power User+ user class: 1TB upload, 1.0 ratio, 5 torrents uploaded and/or 10 torrents adopted, 25000 Orbs.<br><br>Fanatic+ user class: 2TB upload, 1.5 ratio, 25 uploads and/or 50 torrents adopted (with minimum 5 uploads), 3 months account age, 100000 Orbs.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>Aither</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>BBT</td><td>14&nbsp;days</td><td>ANT activity proof.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BLU</td><td>120&nbsp;days</td><td>4 months account age.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>90&nbsp;days</td><td>3 months account age.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CZ</td><td>180&nbsp;days</td><td>Fanatic user class. 50 uploaded torrents, or 75 adopted torrents. 6 months account age.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>NBL</td><td>180&nbsp;days</td><td>Fanatic user class. 6 months account age.</td></tr>
-<tr><th scope="row">ANT<span class="arrow">-&gt;</span>OPS</td><td>90&nbsp;days</td><td>Fanatic user class. ANT activity proof.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>BLU</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CRT</td><td>91&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>CZ</td><td>182&nbsp;days</td><td>Fanatic+ user class, 50 uploaded torrents or 75 adopted torrents.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>NBL</td><td>182&nbsp;days</td><td>Fanatic+ user class.</td></tr>
+<tr><th scope="row">ANT<span class="arrow">-&gt;</span>OPS</td><td>91&nbsp;days</td><td>Fanatic+ user class, ANT activity proof.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx+ user class: 3.2TB upload, 1.44 million seed bonus points, no Hit & Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit & Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit & Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
