Update index.html (sync ABT v2)

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">AnimeTorrents a.k.a. AnimeZ (AnT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">ABTorrents (ABT)<br>No invite forum.</td></tr>
+<tr><td colspan="3">ABTorrents a.k.a. Audiobook Torrents (ABT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Aither<br>Invite forum unlocks with Prometheus+ user class: 10TB upload, 1.0 ratio, 1 month average seedtime, 6 month account age.</td></tr>
 <tr><th scope="row">Aither<span class="arrow">-&gt;</span>BLU</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
