--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>OPS</td><td>91&nbsp;days</td><td>Fanatic+ user class, ANT activity proof.</td></tr>
 <tr><th scope="row">ANT<span class="arrow">-&gt;</span>SM</td><td>14&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">AsianCinema (ACM)<br>Awaiting someone to add.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">AlphaRatio (AR)<br>Invite forum unlocks with Sphinx+ user class: 3.2TB upload, 1.44 million seed bonus points, no Hit & Runs, 26 weeks account age.<br><br>Satyr user class: 12TB upload, 2.4 million seed bonus points, no Hit & Runs, 60 weeks account age.<br>Adonis user class: 12TB upload, 2.0 million seed bonus points, no Hit & Runs, 60 weeks account age, 50USD or greater donation.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>Aither</td><td>182&nbsp;days</td><td>1.0 ratio.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>1.0 ratio.</td></tr>
