Update index.html (sync AZ)

--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>TS</td><td>365&nbsp;days</td><td>Required age or proof of 1 other tracker profile older than required age.</td></tr>
 <tr><th scope="row">AR<span class="arrow">-&gt;</span>UHDB</td><td>182&nbsp;days</td><td>Satyr or Adonis user class.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">AvistaZ (AZ)<br>Self-invite unlocks at 300GB upload, 2.0 ratio, seeding 5 torrents, no Hit & Runs, 4 months account age (or V.I.P.), and costs 10,000 BP per invite with a 1 month cool-down.</td></tr>
+<tr><th scope="row">AZ<span class="arrow">-&gt;</span>CZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AZ<span class="arrow">-&gt;</span>EZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">AZ<span class="arrow">-&gt;</span>PHD</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">BeyondHD (BHD)<br>Invite forum unlocks with Pro user class: 1.25TB upload, 0.70 ratio, 30 days seed time, 4 years 11 months total seed time, 60 completed seeds, 500GB special seed size, 6 months account age.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Aither</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
