Update index.html (sync BBT)

--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@
 <tr><th scope="row">AZ<span class="arrow">-&gt;</span>EZ</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">AZ<span class="arrow">-&gt;</span>PHD</td><td>121&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
+<tr><td colspan="3">BakaBT (BBT)<br>No invite forum.</td></tr>
+<tr class="spacer"></tr>
 <tr><td colspan="3">BeyondHD (BHD)<br>Invite forum unlocks with Pro user class: 1.25TB upload, 0.70 ratio, 30 days seed time, 4 years 11 months total seed time, 60 completed seeds, 500GB special seed size, 6 months account age.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>Aither</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
