Update index.html (sync BHD)

--- a/index.html
+++ b/index.html
@@ -149,21 +149,23 @@
 <tr class="spacer"></tr>
 <tr><td colspan="3">BakaBT (BBT)<br>No invite forum.</td></tr>
 <tr class="spacer"></tr>
-<tr><td colspan="3">BeyondHD (BHD)<br>Invite forum unlocks with Pro user class: 1.25TB upload, 0.70 ratio, 30 days seed time, 4 years 11 months total seed time, 60 completed seeds, 500GB special seed size, 6 months account age.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>Aither</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CGP</td><td>180&nbsp;days</td><td>2.0 ratio, or Elite user class and 1.0 ratio.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CRT</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>HDB</td><td>913&nbsp;days</td><td>3 other top tracker profiles. King user class. 3TB seed size. 5 months average seed time. 30 months account age.<br>Banned countries: China, Egypt, Latvia, Russia, Turkey, Ukraine, Vietnam, Poland and India.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>Hone</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>MTV</td><td>180&nbsp;days</td><td>1.5 ratio.</td></tr>
+<tr><td colspan="3">BeyondHD (BHD)<br>Invite forum unlocks with Pro+ user class: 1.25TB upload, 0.70 ratio, 1 month average seed time, 4 years 11 months total seed time, 60 completed seeds, 500GB special seed size, 6 months account age.<br><br>Elite+ user class: Awaiting someone to add.<br>King+ user class: Awaiting someone to add.
+</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>Aither</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>ANT</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CGP</td><td>182&nbsp;days</td><td>2.0 ratio and 3TB upload, or Elite+ user class with 3TB upload and 1.0 ratio.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>CRT</td><td>182&nbsp;days</td><td>1.0 ratio.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>HDB</td><td>913&nbsp;days</td><td> King+ user class, 3 other 'top' tracker profiles, 5 month average seed time, 3TB seed size.<br>Banned countries: China, Egypt, Latvia, Russia, Turkey, Ukraine, Vietnam, Poland and India.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>HUNO</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>IMT</td><td>365&nbsp;days</td><td>3 other tracker profiles.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>MTV</td><td>182&nbsp;days</td><td>1.5 ratio.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>NBL</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>King user class. 2 years account age.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>PTP</td><td>730&nbsp;days</td><td>King+ user class.</td></tr>
 <tr><th scope="row">BHD<span class="arrow">-&gt;</span>PxC</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>PxHD</td><td>180&nbsp;days</td><td>3 other tracker profiles.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>RED</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>SM</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
-<tr><th scope="row">BHD<span class="arrow">-&gt;</span>THD</td><td>180&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>PxHD</td><td>182&nbsp;days</td><td>3 other tracker profiles.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>RED</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>SM</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
+<tr><th scope="row">BHD<span class="arrow">-&gt;</span>THD</td><td>182&nbsp;days</td><td>No additional requirements.</td></tr>
 <tr class="spacer"></tr>
 <tr><td colspan="3">Bibliotik (BiB)<br>Invite forum unlocks with Power User user class: either 1GB upload and 100 torrents uploaded, or 10GB upload and 10 torrents uploaded, 1.05 ratio, 2 weeks account age.</td></tr>
 <tr><th scope="row">BiB<span class="arrow">-&gt;</span>AB</td><td>365&nbsp;days</td><td>12 months account age.</td></tr>
